2007-09-09  Karl Berry  <karl@gnu.org>

	* Version 4.11.

2007-09-05  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi (Variables): make an anchor for
	scroll-behavior, and use it.  Idea from Benno Schulenberg,
	04 Sep 2007 00:21:01.

2007-09-03  Karl Berry  <karl@gnu.org>

	* pretest 4.9.92.

	* doc/texinfo.tex (\baselinefactor): new macro, 1 by default.
	(\setleading): use it, to allow for poor man's double spacing.
	(\afourpaper, \letterpaper): use absolute dimension for height,
	instead of a multiple of \baselineskip.  (Otherwise things run off
	the bottom when double-spacing.)

2007-09-01  Juan Manuel Guerrero  <juan.guerrero@gmx.de>

	* djgpp/config.bat: change file names arguments and configure.orig
	to args and configure.org.
	Remove the command line that deletes co*.tmp files.

2007-08-31  Karl Berry  <karl@gnu.org>

	* info/info.c (main) [LC_MESSAGES]: conditionalize setlocale on
	LC_MESSAGES, since djgpp 2.04 doesn't have it.
	Report from Juan Manuel Guerrero, 28 Aug 2007 21:38:18.
	* info/man.c (get_manpage_contents) [LC_MESSAGES]: likewise.
	* makeinfo/makeinfo.c (main): doc fix, likewise.

2007-08-26  Karl Berry  <karl@gnu.org>

	* info/infodoc.c (info_internal_help_text): hardwire
	menu-digits help string; bug report from Benno.

2007-08-16  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.c (iso8859_2_map): include known HTML entities,
	from the 88592.txt file in the GNU enscription distribution.

2007-08-04  Juan Manuel Guerrero  <juan.guerrero@gmx.de>

	* djgpp/config.bat: replace the string diffutil*.pot by
	the correct one texinfo*.pot

	* djgpp/config.sed: adjust for the use with autoconf 2.61

	* djgpp/config.site: adjust for the use with autoconf 2.61

2007-08-04  Sergey Poznyakoff  <gray@gnu.org.ua>

        * doc/info-stnd.texi: Document cursor-movement-scrolls variable.
        Document different spellings of scroll-behaviour variable.
        * info/info-utils.c (info_references_internal): Initialize
        line_number.